# EMPE

./: .gitignore  CMakeLists.txt  README.md  aboutusdialog.cpp  aboutusdialog.h  appmenu.cpp  appmenu.h  debugwindow.cpp  debugwindow.h  graphwindow.cpp  graphwindow.h  graphwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  portconfig.h  portsettings.cpp  portsettings.h  resources.qrc  stopperswindow.cpp  stopperswindow.h  translations.qrc  ui_graphwindow.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  cmake-multi-platform.yml  trigger_release.yml
fonts/: FONT-LICENSE
icons/: EMPE.icns
languages/: lidar_en.ts  lidar_pl.ts
translations/: lidar_en.qm  lidar_en.ts  lidar_pl.qm  lidar_pl.ts
windows/: CMakeLists.txt  README  graphwindow.cpp  graphwindow.h  main.cpp  mainwindow.cpp
